lib/mediapipe_face_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/mediapipe_face.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class MediapipeFaceBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MediapipeFaceBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MediapipeFaceBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<MpFaceMeshContext> mp_face_mesh_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<MpFaceMeshCreateOptions> options,
  ) {
    return _mp_face_mesh_create(model_path, options);
  }

  late final _mp_face_mesh_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<MpFaceMeshCreateOptions>,
          )
        >
      >('mp_face_mesh_create');
  late final _mp_face_mesh_create = _mp_face_mesh_createPtr
      .asFunction<
        ffi.Pointer<MpFaceMeshContext> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<MpFaceMeshCreateOptions>,
        )
      >();

  void mp_face_mesh_destroy(ffi.Pointer<MpFaceMeshContext> context) {
    return _mp_face_mesh_destroy(context);
  }

  late final _mp_face_mesh_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceMeshContext>)>
      >('mp_face_mesh_destroy');
  late final _mp_face_mesh_destroy = _mp_face_mesh_destroyPtr
      .asFunction<void Function(ffi.Pointer<MpFaceMeshContext>)>();

  ffi.Pointer<MpFaceMeshResult> mp_face_mesh_process(
    ffi.Pointer<MpFaceMeshContext> context,
    ffi.Pointer<MpImage> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
  ) {
    return _mp_face_mesh_process(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
    );
  }

  late final _mp_face_mesh_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshResult> Function(
            ffi.Pointer<MpFaceMeshContext>,
            ffi.Pointer<MpImage>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
          )
        >
      >('mp_face_mesh_process');
  late final _mp_face_mesh_process = _mp_face_mesh_processPtr
      .asFunction<
        ffi.Pointer<MpFaceMeshResult> Function(
          ffi.Pointer<MpFaceMeshContext>,
          ffi.Pointer<MpImage>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
        )
      >();

  ffi.Pointer<MpFaceMeshResult> mp_face_mesh_process_nv21(
    ffi.Pointer<MpFaceMeshContext> context,
    ffi.Pointer<MpNv21Image> image,
    ffi.Pointer<MpNormalizedRect> override_rect,
    int rotation_degrees,
    int mirror_horizontal,
  ) {
    return _mp_face_mesh_process_nv21(
      context,
      image,
      override_rect,
      rotation_degrees,
      mirror_horizontal,
    );
  }

  late final _mp_face_mesh_process_nv21Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceMeshResult> Function(
            ffi.Pointer<MpFaceMeshContext>,
            ffi.Pointer<MpNv21Image>,
            ffi.Pointer<MpNormalizedRect>,
            ffi.Int32,
            ffi.Uint8,
          )
        >
      >('mp_face_mesh_process_nv21');
  late final _mp_face_mesh_process_nv21 = _mp_face_mesh_process_nv21Ptr
      .asFunction<
        ffi.Pointer<MpFaceMeshResult> Function(
          ffi.Pointer<MpFaceMeshContext>,
          ffi.Pointer<MpNv21Image>,
          ffi.Pointer<MpNormalizedRect>,
          int,
          int,
        )
      >();

  void mp_face_mesh_release_result(ffi.Pointer<MpFaceMeshResult> result) {
    return _mp_face_mesh_release_result(result);
  }

  late final _mp_face_mesh_release_resultPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<MpFaceMeshResult>)>
      >('mp_face_mesh_release_result');
  late final _mp_face_mesh_release_result = _mp_face_mesh_release_resultPtr
      .asFunction<void Function(ffi.Pointer<MpFaceMeshResult>)>();

  ffi.Pointer<ffi.Char> mp_face_mesh_last_error(
    ffi.Pointer<MpFaceMeshContext> context,
  ) {
    return _mp_face_mesh_last_error(context);
  }

  late final _mp_face_mesh_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceMeshContext>)
        >
      >('mp_face_mesh_last_error');
  late final _mp_face_mesh_last_error = _mp_face_mesh_last_errorPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceMeshContext>)
      >();

  ffi.Pointer<ffi.Char> mp_face_mesh_last_global_error() {
    return _mp_face_mesh_last_global_error();
  }

  late final _mp_face_mesh_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_face_mesh_last_global_error',
      );
  late final _mp_face_mesh_last_global_error =
      _mp_face_mesh_last_global_errorPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Face detection (short-range) APIs.
  ffi.Pointer<MpFaceDetectionContext> mp_face_detection_create(
    ffi.Pointer<ffi.Char> model_path,
    ffi.Pointer<MpFaceDetectionCreateOptions> options,
  ) {
    return _mp_face_detection_create(model_path, options);
  }

  late final _mp_face_detection_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceDetectionContext> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<MpFaceDetectionCreateOptions>,
          )
        >
      >('mp_face_detection_create');
  late final _mp_face_detection_create = _mp_face_detection_createPtr
      .asFunction<
        ffi.Pointer<MpFaceDetectionContext> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<MpFaceDetectionCreateOptions>,
        )
      >();

  void mp_face_detection_destroy(ffi.Pointer<MpFaceDetectionContext> context) {
    return _mp_face_detection_destroy(context);
  }

  late final _mp_face_detection_destroyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MpFaceDetectionContext>)
        >
      >('mp_face_detection_destroy');
  late final _mp_face_detection_destroy = _mp_face_detection_destroyPtr
      .asFunction<void Function(ffi.Pointer<MpFaceDetectionContext>)>();

  ffi.Pointer<MpFaceDetectionResult> mp_face_detection_process(
    ffi.Pointer<MpFaceDetectionContext> context,
    ffi.Pointer<MpImage> image,
  ) {
    return _mp_face_detection_process(context, image);
  }

  late final _mp_face_detection_processPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<MpFaceDetectionResult> Function(
            ffi.Pointer<MpFaceDetectionContext>,
            ffi.Pointer<MpImage>,
          )
        >
      >('mp_face_detection_process');
  late final _mp_face_detection_process = _mp_face_detection_processPtr
      .asFunction<
        ffi.Pointer<MpFaceDetectionResult> Function(
          ffi.Pointer<MpFaceDetectionContext>,
          ffi.Pointer<MpImage>,
        )
      >();

  void mp_face_detection_release_result(
    ffi.Pointer<MpFaceDetectionResult> result,
  ) {
    return _mp_face_detection_release_result(result);
  }

  late final _mp_face_detection_release_resultPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MpFaceDetectionResult>)
        >
      >('mp_face_detection_release_result');
  late final _mp_face_detection_release_result =
      _mp_face_detection_release_resultPtr
          .asFunction<void Function(ffi.Pointer<MpFaceDetectionResult>)>();

  ffi.Pointer<ffi.Char> mp_face_detection_last_error(
    ffi.Pointer<MpFaceDetectionContext> context,
  ) {
    return _mp_face_detection_last_error(context);
  }

  late final _mp_face_detection_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceDetectionContext>)
        >
      >('mp_face_detection_last_error');
  late final _mp_face_detection_last_error = _mp_face_detection_last_errorPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<MpFaceDetectionContext>)
      >();

  ffi.Pointer<ffi.Char> mp_face_detection_last_global_error() {
    return _mp_face_detection_last_global_error();
  }

  late final _mp_face_detection_last_global_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'mp_face_detection_last_global_error',
      );
  late final _mp_face_detection_last_global_error =
      _mp_face_detection_last_global_errorPtr
          .asFunction<ffi.Pointer<ffi.Char> Function()>();
}

final class MpFaceMeshContext extends ffi.Opaque {}

final class MpFaceDetectionContext extends ffi.Opaque {}

enum MpPixelFormat {
  MP_PIXEL_FORMAT_RGBA(0),
  MP_PIXEL_FORMAT_BGRA(1);

  final int value;
  const MpPixelFormat(this.value);

  static MpPixelFormat fromValue(int value) => switch (value) {
    0 => MP_PIXEL_FORMAT_RGBA,
    1 => MP_PIXEL_FORMAT_BGRA,
    _ => throw ArgumentError("Unknown value for MpPixelFormat: $value"),
  };
}

final class MpImage extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int bytes_per_row;

  @ffi.UnsignedInt()
  external int format;
}

/// Android camera NV21 input (Y plane + interleaved VU plane).
final class MpNv21Image extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> y;

  external ffi.Pointer<ffi.Uint8> vu;

  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int y_bytes_per_row;

  @ffi.Int32()
  external int vu_bytes_per_row;
}

final class MpNormalizedRect extends ffi.Struct {
  @ffi.Float()
  external double x_center;

  @ffi.Float()
  external double y_center;

  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;

  @ffi.Float()
  external double rotation;
}

final class MpLandmark extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class MpFaceMeshResult extends ffi.Struct {
  external ffi.Pointer<MpLandmark> landmarks;

  @ffi.Int32()
  external int landmarks_count;

  external MpNormalizedRect rect;

  @ffi.Float()
  external double score;

  @ffi.Int32()
  external int image_width;

  @ffi.Int32()
  external int image_height;
}

final class MpFaceMeshCreateOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tflite_library_path;

  @ffi.Int32()
  external int threads;

  @ffi.Float()
  external double min_detection_confidence;

  @ffi.Float()
  external double min_tracking_confidence;

  @ffi.Uint8()
  external int enable_smoothing;
}

final class MpFaceDetectionCreateOptions extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tflite_library_path;

  @ffi.Int32()
  external int threads;

  @ffi.Float()
  external double score_threshold;

  @ffi.Float()
  external double nms_threshold;

  @ffi.Int32()
  external int max_detections;
}

final class MpDetectionBox extends ffi.Struct {
  @ffi.Float()
  external double x_center;

  @ffi.Float()
  external double y_center;

  @ffi.Float()
  external double width;

  @ffi.Float()
  external double height;
}

final class MpDetection extends ffi.Struct {
  external MpDetectionBox box;

  @ffi.Float()
  external double score;

  /// x0,y0,x1,y1,...
  @ffi.Array.multi([12])
  external ffi.Array<ffi.Float> keypoints;

  @ffi.Int32()
  external int keypoints_count;
}

final class MpFaceDetectionResult extends ffi.Struct {
  external ffi.Pointer<MpDetection> detections;

  @ffi.Int32()
  external int count;

  @ffi.Int32()
  external int image_width;

  @ffi.Int32()
  external int image_height;
}
